--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -73,26 +73,26 @@ layout: default
 							<label class="header-filter">{{lang.date-title}}</label>
 							<ul class="list-type-none">
 								<li class="list-item-datarange"><span class="dropdown-sm dropdown-sm-date">1999</span></li>
-								<li class="list-item-datarange"><span>to</span></li>
+								<li class="list-item-datarange"><span>{{lang.to}}</span></li>
 								<li class="list-item-datarange"><span class="dropdown-sm dropdown-sm-date">2016</span></li>
 							</ul>
 						</fieldset>
 					</div>
 					<div class="filter-buttons-mobile">
-						<a class="button" href="">Apply</a>
-						<a class="button button-grey" href="">Cancel</a>
+						<a class="button" href="">{{lang.button-apply}}</a>
+						<a class="button button-grey" href="">{{lang.button-cancel}}</a>
 					</div>
 				</form>
 			</div>
 			<div class="content-sidebar">
-				<h6 class="content-sidebar-header">Showing 15 Datasets</h6>
+				<h6 class="content-sidebar-header">{{lang.dataset-num-title1}} 15 {{lang.dataset-num-title2}}</h6>
 				<div class="sort-filter">
 					<span class="sort-filter-header">{{lang.sort}}</span>
-					<div class="dropdown-sm">Recent Updates</div>
+					<div class="dropdown-sm">{{lang.sortby-option1}}</div>
 					<div class="dropdown-categories">
 						<ul class="list-type-none">
-							<li class="dropdown-categories-item">Alphabetically</li>
-							<li class="dropdown-categories-item">Alphabetically</li>
+							<li class="dropdown-categories-item">{{lang.sortby-option2}}</li>
+							<li class="dropdown-categories-item">{{lang.sortby-option2}}</li>
 						</ul>
 					</div>
 				</div>
@@ -185,11 +185,11 @@ layout: default
 				</ul>
 				<div class="pagination">
 					<ul class="list-type-none">
-						<li class="list-item-pagination pagination-previous"><a href="">Previous</a></li>
+						<li class="list-item-pagination pagination-previous"><a href="">{{lang.previous}}</a></li>
 						<li class="list-item-pagination"><a class="pagination-link-active" href="">1</a></li>
 						<li class="list-item-pagination"><a href="">2</a></li>
 						<li class="list-item-pagination"><a href="">3</a></li>
-						<li class="list-item-pagination pagination-next"><a href="">Next</a></li>
+						<li class="list-item-pagination pagination-next"><a href="">{{lang.next}}</a></li>
 					</ul>
 				</div>
 			</div>
