--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -5,9 +5,9 @@ layout: default
 <section class="wrapper-feature feature">
 	<div class="wrapper wrapper-content">
 			<div class="section-feature_main">
-				<h1 class="header-feature">Making Iranian Data Available to the Public</h1>
-				<p class="description-lg">Find clean, reliable data from housing to transportation. With our growing database, check back for updates or sign up for our newsletter, to see when new sets are added.</p>
-				<a class="button button-lg" href="/{{page.lang}}/data/">View All Datsets</a>
+				<h1 class="header-feature">{{lang.homepage-title}}</h1>
+				<p class="description-lg">{{lang.homepage-descript}}</p>
+				<a class="button button-lg" href="/{{page.lang}}/data/">{{lang.homepage-button}}</a>
 			</div>
 			<div class="section-feature_secondary">
 				<ul class="list-type-none">
@@ -36,16 +36,20 @@ layout: default
 {% include methodology-home.html %}
 	<section  class="wrapper wrapper-content">
 		<h2>{{lang.use_cases}}</h2>
-		<p class="description-md width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
+		<p class="description-md width-shortened">{{lang.homepage-usecases-descript}}</p>
 		<div class="feature-overlay">
-			<img class="img-feature" src="/assets/graphics/feature1.jpg">
-			<div class="overlay-description">
-				<span class="type-category">Featured</span>
-				<h5><a class="text-link" href="">Name of Dataset</a></h5>
-				<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
-				<a class="normal-link" href="">View Site</a>
-			</div>
+			{% for usecase in site.usecases %}
+				{% if usecase.featured == true %}
+				<img class="img-feature" src="/assets/graphics/{{usecase.img}}">
+				<div class="overlay-description">
+					<span class="type-category">{{lang.featured}}</span>
+					<h5><a target="_blank"  class="text-link" href="{{lang.homepage-usecase-link}}">{{usecase.title}}</a></h5>
+					<p class="width-shortened">{{usecase.description}}</p>
+					<a target="_blank" href="{{usecase.link}}" class="normal-link" href="">{{lang.homepage-usecase-link}}</a>
+				</div>
+				{% endif %}
+			{% endfor %}
 		</div>
-		<a class="button" href="/{{page.lang}}/usecases/">View All Use Cases</a>
+		<a class="button" href="/{{page.lang}}/usecases/">{{lang.homepage-usecases-button}}</a>
 	</div>
 </section>
