--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -34,18 +34,6 @@ layout: default
 		<!-- </ul> -->
 		<!-- </fieldset> -->
 		<!-- </div> -->
-		<!-- <div class="wrapper-filter-item"> -->
-		<!-- <fieldset> -->
-		<!-- <label class="header-filter">{{lang.date-title}}</label> -->
-		<!-- <ul class="list-type-none"> -->
-		<!-- <li class="list-item-datarange"><span class="dropdown-sm dropdown-sm-date">1999</span></li> -->
-		<!-- <li class="list-item-datarange"><span>to</span></li> -->
-		<!-- <li class="list-item-datarange"><span class="dropdown-sm dropdown-sm-date">2016</span></li> -->
-		<!-- </ul> -->
-		<!-- </fieldset> -->
-		<!-- </div> -->
-		<!-- </form> -->
-		<!-- </div> -->
 		</div>
 	</div>
 </section>
@@ -55,6 +43,7 @@ layout: default
  var PAGE_LANG = '{{page.lang}}';
  var labels = {
      'filter-title': '{{lang.filter-title}}',
-     'category-title': '{{lang.category-title}}'
+     'category-title': '{{lang.category-title}}',
+     'date-title': '{{lang.date-title}}'
  }
 </script>
