main nav, resources and filters work on responsive sizes

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,5 +1,5 @@
 	{% assign lang = site.data[page.lang][0] %}
-	<header class="wrapper">
+	<header id="site-header" class="wrapper">
 		<h1 class="logo">
 			<a href="/{{page.lang}}/"><img src="/assets/graphics/IOD-logo.png" alt="Iran Open Data" /></a>
 		</h1>
