--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -55,6 +55,8 @@ layout: default
  var PAGE_LANG = '{{page.lang}}';
  var labels = {
      'filter-title': '{{lang.filter-title}}',
-     'category-title': '{{lang.category-title}}'
+     'category-title': '{{lang.category-title}}',
+     'button-apply': '{{lang.button-apply}}',
+     'button-cancel': '{{lang.button-cancel}}'
  }
 </script>
