--- a/app/_layouts/resources.html
+++ b/app/_layouts/resources.html
@@ -45,7 +45,7 @@ The following part removes dulpicated categories and invalid categories like bla
 				<ul class="list-type-none dropdown-resources-options">
 					{% for category in categories %}
 					<li class="list-item-filter link-filter">
-						<a href="">{{category}} <span class="filter-number">(2)</span></a>
+						<a href="#{{category | split:' ' | join:'-'}}">{{category}} <span class="filter-number">(2)</span></a>
 					</li>
 					{% endfor %}
 				</ul>
@@ -53,7 +53,7 @@ The following part removes dulpicated categories and invalid categories like bla
 		</div>
 		<div class="content-sidebar">
 			{% for category in categories %}
-			<div class="faux-list-item">
+			<div id="{{category | split:' ' | join:'-'}}" class="faux-list-item">
 				<h4 class="header-divider">{{category}}</h4>
 				<ul class="list-type-none">
 					{% for resource in site.resources %}
