--- a/app/assets/styles/_common.scss
+++ b/app/assets/styles/_common.scss
@@ -235,6 +235,7 @@ header {
 .button-grey, .button-grey:visited {
 	border-color: $grey;
 	color: $grey;
+	margin-left: 1em;
 }
 
 .button-filter {
@@ -357,6 +358,9 @@ nav {
 			border-bottom: 0;
 		}
 	}
+	.open {
+		display: inherit;
+	}
 }
 
 .menu-hamburger, .menu-hamburger:visited {
@@ -418,6 +422,7 @@ nav {
 
 .nav-mobile { 
 	@media screen and (max-width: 920px) {
+		display: none;
 		position: absolute;
 		right: 0em;
 		background-color: #fff;
@@ -444,6 +449,11 @@ nav {
 
 .nav-container {
 	position: relative;
+	.open {
+		@media screen and (max-width: 920px) {
+			display: inherit;
+		}
+	}
 }
 
 .nav-languages {
@@ -828,13 +838,20 @@ footer {
 			display: initial;
 		}
 	}
+	.open {
+		@media screen and (max-width: 768px) {
+			display: initial;
+		}
+	}
 }
 
 .dropdown-resources-options {
 	@media screen and (max-width: 768px) {
+		display: none;
 		position: absolute;
 		border: 1px solid $light-grey;
 		top: 3em;
+		left: 0;
 		background-color: #fff;
 		li { 
 			padding: .8em 1em;
@@ -848,6 +865,7 @@ footer {
 .wrapper-datasets {
 	.sidebar {
 		@media screen and (max-width: 768px) {
+			display: none;
 			z-index: 4;
 			position: absolute;
 			background-color: #fff;
@@ -857,6 +875,11 @@ footer {
 			padding: 1.5em 1.2em;
 		}
 		@media screen and (min-width: 768px) {
+			display: initial;
+		}
+	}
+	.open {
+		@media screen and (max-width: 768px) {
 			display: initial;
 		}
 	}
