--- a/app/_layouts/dataset.html
+++ b/app/_layouts/dataset.html
@@ -35,7 +35,11 @@ layout: default
  const lang = {
      'button-share': '{{lang.button-share}}',
      'button-download': '{{lang.button-download}}',
-     'dataset-secondary-title': '{{lang.dataset-secondary-title}}'
+     'dataset-secondary-title': '{{lang.dataset-secondary-title}}',
+     'dataset-id': '{{lang.dataset-id}}',
+     'dataset-dates': '{{lang.dataset-dates}}',
+     'dataset-formats': '{{lang.dataset-formats}}',
+     'dataset-source': '{{lang.dataset-source}}'
  }
 
  const page = {
