--- a/app/assets/styles/_common.scss
+++ b/app/assets/styles/_common.scss
@@ -149,7 +149,7 @@ h6 {
 
 .content-sidebar-header {
 	display: inline-block;
-	padding-top: .3em;
+	padding-top: .7em;
 	margin-bottom: 0;
 }
 
@@ -679,13 +679,54 @@ textarea {
 }
 
 
-/*dropdown*/
+.wrapper-dropdown-sort {
+	padding: 0 0 0 0.5rem;
+  width: 11rem;
+  height: 1.8rem;
+  overflow: hidden;
+  margin: 0 auto;
+  position: relative;
+  border: 1px solid $light-grey;
+
+  &:after {
+  	background-image: url("/assets/graphics/collecticons/chevron-down.svg");
+  	content: "";
+  	position: absolute;
+    right: 1rem;
+    top: 50%;
+    transform: translate(0, -50%);
+    pointer-events: none;
+    opacity: 0.64;
+    background-size: 10px 10px;
+    height: 10px;
+		width: 10px;
+  }
+
+	select {
+    background: transparent;
+    border: 0;
+    height: 1.8rem;
+    padding: 0.5rem;
+    width: 18rem;
+    cursor: pointer;
+    color: inherit;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+/*dropdown
 .dropdown-sm {
 	border: 1px solid $light-grey;
 	padding: .3em 1em;
+	width: 17rem;
+  height: 3rem;
 	float: left;
 	font-size: .85em;
 	min-width: 100px;
+	overflow: hidden;
 	&:after {
 		content: "";
 		display: block;
@@ -697,7 +738,7 @@ textarea {
 		float: right;
 		margin-top: .35em;
 	}
-}
+}*/
 
 .dropdown-sm-date {
 	min-width: 50px;
