--- a/app/assets/styles/_common.scss
+++ b/app/assets/styles/_common.scss
@@ -680,11 +680,10 @@ textarea {
 
 
 .wrapper-dropdown-sort {
-	padding: 0 0 0 0.5rem;
+	padding: 0 0 0 0.1rem;
   width: 11rem;
   height: 1.8rem;
   overflow: hidden;
-  margin: 0 auto;
   position: relative;
   border: 1px solid $light-grey;
 
@@ -707,7 +706,7 @@ textarea {
     border: 0;
     height: 1.8rem;
     padding: 0.5rem;
-    width: 18rem;
+    width: 15rem;
     cursor: pointer;
     color: inherit;
 
@@ -717,31 +716,11 @@ textarea {
   }
 }
 
-/*dropdown
-.dropdown-sm {
-	border: 1px solid $light-grey;
-	padding: .3em 1em;
-	width: 17rem;
-  height: 3rem;
-	float: left;
-	font-size: .85em;
-	min-width: 100px;
-	overflow: hidden;
-	&:after {
-		content: "";
-		display: block;
-		background-size: 10px 10px;
-		background-image: url("/assets/graphics/collecticons/chevron-down.svg");
-		height: 10px;
-		width: 10px;
-		background-repeat: no-repeat;
-		float: right;
-		margin-top: .35em;
+.wrapper-dropdown-sort-sm {
+	width: 7rem;
+	 .dropdown-sm-date {
+		width: 9rem;
 	}
-}*/
-
-.dropdown-sm-date {
-	min-width: 50px;
 }
 
 .dropdown-categories {
