Add separate css build for rtl file

--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -10,7 +10,8 @@
 
 <!-- build:css /assets/styles/main.css -->
 <link rel="stylesheet" href="/assets/styles/main.css">
-
+<!-- endbuild -->
+<!-- build:css /assets/styles/main_rtl.css -->
 {% if page.lang == 'fa' %}
   <link rel="stylesheet" href="/assets/styles/main_rtl.css">
 {% endif %}
