Add more metadata tags to Dataset page

--- a/app/_layouts/dataset.html
+++ b/app/_layouts/dataset.html
@@ -39,8 +39,14 @@ layout: default
      'dataset-id': '{{lang.dataset-id}}',
      'dataset-dates': '{{lang.dataset-dates}}',
      'dataset-formats': '{{lang.dataset-formats}}',
-     'dataset-source': '{{lang.dataset-source}}'
+     'dataset-source': '{{lang.dataset-source}}',
+     'dataset-added': '{{lang.dataset-added}}',
+     'dataset-maintainer': '{{lang.dataset-maintainer}}',
+     'dataset-frequency': '{{lang.dataset-frequency}}',
+     'dataset-keywords': '{{lang.dataset-keywords}}',
+     'dataset-license': '{{lang.dataset-license}}'
  }
+
 
  const page = {
      'notes': '{{page.notes}}',
