cleaned up css files

--- a/app/_layouts/contact.html
+++ b/app/_layouts/contact.html
@@ -27,7 +27,7 @@ layout: default
 				<label class="label-form" for="message">{{lang.message}}</label>
 				<textarea></textarea>
 			</div>
-			<button class="button button-right">{{lang.button-submit}}</button>
+			<button class="button button-right button-contact">{{lang.button-submit}}</button>
 		</form>
 		<div class="subsection subsection-bold content-centered">
 			<h2 class="header-centered">{{lang.other-ways}}</h2>
