--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -6,5 +6,12 @@
 @import "reset";
 @import "syntax-highlighting";
 @import "common";
+@import "home";
+@import "type";
+@import "forms";
+@import "links-buttons";
+@import "datasets";
+@import "about";
+@import "footer";
 @import 'https://fonts.googleapis.com/css?family=Lato:700,900';
 @import 'https://fonts.googleapis.com/css?family=Raleway:400,400i,700';
