--- a/app/assets/styles/_common.scss
+++ b/app/assets/styles/_common.scss
@@ -1,279 +1,3 @@
-/*Type*/
-h1, h2, h3, h4, h5, h6 {
-	font-family: $header-font;
-}
-
-h1 {
-	font-weight: 900;
-	line-height: .95em;
-	@media screen and (min-width: 320px) {
-		font-size: 3.2em;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 4.2em;
-	}
-}
-
-h2 {
-	font-weight: 900;
-	line-height: 1em;
-	@media screen and (min-width: 320px) {
-		font-size: 2.4em;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 2.85em;
-	}
-}
-
-h3 {
-	font-size: 2.35em;
-	font-weight: 700;
-}
-
-h4 {
-	font-size: 1.85em;
-	font-weight: 700;
-}
-
-h5 {
-	font-size: 1.5em;
-	font-weight: 700;
-	line-height: 1.2em;
-}
-
-h6 {
-	font-size: 1.15em;
-	font-weight: 700;
-}
-
-.header-with-description {
-	margin-bottom: .2em;
-}
-
-.logo {
-	float: left;
-	img {
-		width: 4em;
-	}
-}
-
-.metadata {
-	font-size: .8em;
-	display: inline-block;
-	color: $grey;
-	* {
-		display: inline-block;
-	}
-}
-
-.metadata-item {
-	float: left;
-	width: 25%;
-	line-height: 2.5em
-}
-
-.metadata-item-header {
-	font-weight: 700;
-	width: 15%;
-	&:nth-of-type(3n) {
-		clear: left;
-	}
-}
-
-.metadata-lg {
-	@extend %clearfix;
-	margin-bottom: 1.5em;
-}
-
-.description-md {
-	line-height: 1.8em;
-	@media screen and (min-width: 320px) {
-		font-size: 1em;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 1.1em;
-	}
-}
-
-.description-lg {
-	line-height: 1.7em;
-	color: $black;
-	@media screen and (min-width: 320px) {
-		font-size: 1em;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 1.15em;
-	}
-}
-
-.metadata-title {
-	font-weight: bold;
-}
-
-.type-category {
-	text-transform: uppercase;
-	font-size: .8em;
-	font-weight: 700;
-}
-
-.type-category-lg {
-	font-size: 1.17em;
-	display: block;
-	margin-bottom: .3em;
-}
-
-.header-feature {
-	font-weight: 900;
-	line-height: 1.2em;
-	@media screen and (min-width: 320px) {
-		font-size: 4em;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 5em;
-	}
-}
-
-.header-divider {
-	border-bottom: 3px solid $black;
-	padding-bottom: .5em;
-  margin-bottom: 1.3em;
-}
-
-.header-centered {
-	text-align: center;
-}
-
-.metadata-date {
-	font-style: italic;
-}
-
-.content-sidebar-header {
-	display: inline-block;
-	padding-top: .7em;
-	margin-bottom: 0;
-}
-
-header {
-	margin: .7em 0 8em;
-}
-
-
-/*links & buttons*/
-.nav-link, .nav-link:visited, {
-	color: $text-color;
-}
-
-.normal-link, .normal-link:visited, p a, p a:visited {
-	color: $link-color;
-	font-family: $header-font;
-	font-weight: 700;
-}
-
-.link-filter {
-	a {
-		&:hover	{
-			color: $link-color;
-		}
-	}
-}
-
-.button, .button:visited,  {
-	color: $link-color;
-	border: 3px solid $link-color;
-	padding: .6em 3em;
-	font-weight: 700;
-	font-size: 1.2em;
-	margin-top: 1em;
-	display: inline-block;
-	font-family: $header-font;
-	background-color: transparent;
-	transition: all 0.3s;
-	@media screen and (min-width: 320px) {
-		font-size: 1.1em;
-	}
-	&:hover {
-		background-color: $link-color;
-		color: #fff;
-	}
-}
-
-.button-lg {
-	border: 4px solid $link-color;
-	font-weight: 900;
-}
-
-.button-sm {
-	background: #fff;
-	border: 1px solid $link-color;
-	font-size: 1em;
-}
-
-.button-white, .button-white:visited, {
-	border: 3px solid #fff;
-	color: #fff;
-	&:hover {
-		background-color: #fff;
-		color: $dark-grey;
-	}
-}
-
-.button-xl, .button-xl:visited, { 
-	padding: 3em;
-	min-width: 11em;
-	text-align: center;
-}
-
-.button-secondary {
-	@media screen and (min-width: 320px) {
-		margin-left: 0;
-	}
-	@media screen and (min-width: 768px) {
-		margin-left: 1.1em;
-	}
-}
-
-.button-grey, .button-grey:visited {
-	border-color: $grey;
-	color: $grey;
-	margin-left: 1em;
-	&:hover {
-		background-color: $grey;
-		color: #fff;
-	}
-}
-
-.button-filter {
-	margin-top: 0;
-	margin-bottom: 1.5em;
-	float: right;
-	@media screen and (min-width: 320px) {
-		display: inherit;
-	}
-	@media screen and (min-width: 768px) {
-		display: none;
-	}
-}
-
-.text-link {
-	border-bottom: 1px solid $lightest-grey;
-	transition: all 0.3s ease 0s;
-	&:hover {
-		border-bottom: 1px solid $grey;
-	}
-}
-
-.button-right {
-	float: right;
-}
-
-.filter-buttons-mobile {
-	display: none;
-	@media screen and (max-width: 768px) {
-		display: initial;
-	}
-}
-
-
 /*Sections*/
 section {
 	margin: 6em 0 10em;
@@ -570,33 +294,6 @@ nav {
 	}
 }
 
-
-/*Pagination*/
-.list-item-pagination {
-	display: inline-block;
-	margin-right: .8em;
-	&:hover {
-		text-decoration: underline;
-	}
-}
-
-.pagination-link-active {
-	font-weight: 700;
-}
-
-.pagination {
-	text-align: center;
-}
-
-.pagination-next {
-	margin-left: 1.3em;
-}
-
-.pagination-previous {
-	margin-right: 1.3em;
-}
-
-
 /*Img*/
 img {
 	width: 100%;
@@ -613,226 +310,6 @@ img {
 }
 
 
-/*Forms*/
-input { 
-	background-color: #fff;
-	border: 1px solid	$light-grey;
-	color: $mid-grey;
-	padding: .6em 1em;
-	font-size: 1em;
-	min-width: 18em;
-}
-
-.checkbox {
-	float: left;
-	min-width: initial;
-}
-
-.header-filter {
-	display: block;
-	font-family: $header-font;
-	font-weight: 700;
-	font-size: 1.2em;
-	margin-bottom: .5em;
-}
-
-.wrapper-filter-item {
-	margin-bottom: 2.5em;
-}
-
-.label-form {
-	font-weight: 700;
-	display: block;
-	margin-bottom: .3em;
-}
-
-textarea {
-	border: 1px solid	$light-grey;
-	height: 162px;
-	padding: 1em;
-	font-size: 1em;
-	color: $mid-grey;
-	@media screen and (min-width: 320px) {
-		min-width: 255px;
-	}
-	@media screen and (min-width: 768px) {
-		min-width: 360px;
-	}
-}
-
-.form-contact {
-	@extend %clearfix;
-}
-
-
-/*sort*/
-.sort-filter-header {
-	font-weight: 700;
-	float: left;
-	margin-right: .7em;
-	padding-top: .4em;
-}
-
-.sort-filter {
-	float: right;
-	position: relative;
-}
-
-
-.wrapper-dropdown-sort {
-	padding: 0 0 0 0.1rem;
-  width: 11rem;
-  height: 1.8rem;
-  overflow: hidden;
-  position: relative;
-  border: 1px solid $light-grey;
-
-  &:after {
-  	background-image: url("/assets/graphics/collecticons/chevron-down.svg");
-  	content: "";
-  	position: absolute;
-    right: 1rem;
-    top: 50%;
-    transform: translate(0, -50%);
-    pointer-events: none;
-    opacity: 0.64;
-    background-size: 10px 10px;
-    height: 10px;
-		width: 10px;
-  }
-
-	select {
-    background: transparent;
-    border: 0;
-    height: 1.8rem;
-    padding: 0.5rem;
-    width: 15rem;
-    cursor: pointer;
-    color: inherit;
-
-    &:focus {
-      outline: none;
-    }
-  }
-}
-
-.wrapper-dropdown-sort-sm {
-	width: 7rem;
-	 .dropdown-sm-date {
-		width: 9rem;
-	}
-}
-
-.dropdown-categories {
-	background-color: #fff;
-	border: 1px solid $light-grey;
-	position: absolute;
-  top: 3em;
-  right: 0;
-  z-index: 3;
-  min-width: 8em;
-}
-
-.dropdown-categories-item {
-	padding: .5em 1em;
-	font-size: .85em;
-	border-bottom: 1px solid $lightest-grey;
-	&:last-of-type {
-		border-bottom: initial;
-	}
-	&:hover {
-		background-color: $light-light-grey;
-	}
-}
-
-.list-item-datarange {
-	float: left;
-	margin-right: 1em;
-	&:nth-child(2) {
-		padding-top: .3em;
-		display: block;
-	}
-}
-
-
-/*footer*/
-footer {
-	background-color: $light-light-grey;
-	border-top: 1px solid $light-grey;
-	padding-top: 2em;
-	padding-bottom: 3em;
-	p {
-		margin-bottom: 0;
-	}
-	nav {
-		@media screen and (max-width: 995px) {
-			display: none;
-		}
-		.nav-list_item:hover, .nav-list_item:active{
-			padding-bottom: 0em;
-			border-bottom: 0;
-			a {
-				color: $link-color;
-			}
-		}
-	}
-	.wrapper-half {
-		@media screen and (max-width: 440px) {
-			width: 100%;
-		}
-	}
-}
-
-
-/*Homepage*/
-.section-feature_main {
-	@media screen and (min-width: 320px) {
-		width: 100%;
-		float: inherit;
-	}
-	@media screen and (min-width: 768px) {
-		float: left;
-		width: 55%;
-	}
-}
-
-.section-feature_secondary {
-	li {
-		margin-bottom: 4em;
-		float: initial;
-		@media screen and (min-width: 440px) {
-			width: 40%;
-			float: left;
-			margin-right: 4%;
-		}
-		@media screen and (min-width: 768px) {
-			float: initial;
-			margin-right: 0;
-			width: 100%
-		}
-	}
-	@media screen and (min-width: 320px) {
-		border-top: 3px solid $black;
-		border-left: 0;
-		padding-left: 0;
-		margin-left: 0;
-		width: 100%;
-		margin-top: 5em;
-		padding-top: 5em;
-	}
-	@media screen and (min-width: 768px) {
-		width: 30%;
-		float: left;
-		border-left: 4px solid $black;
-		padding-left: 4%;
-		margin-left: 7%;
-		margin-top: 0em;
-		padding-top: 0em;
-		border-top: 0;
-	}
-}
-
-
 .sidebar {
 	float: left;
 	width: 28%;
@@ -843,6 +320,7 @@ footer {
 	@media screen and (max-width: 768px) {
 		float: left;
 		margin-right: 1em;
+		margin-top: .2em;
 	}
 }
 
@@ -850,22 +328,6 @@ footer {
 	@media screen and (max-width: 768px) {
 		width: 100%;
 		margin-bottom: 1.5em;
-	}
-}
-
-.dropdown-resources {
-	position: relative;
-	float: left;
-	.dropdown-sm {
-		display: none;
-		@media screen and (max-width: 768px) {
-			display: initial;
-		}
-	}
-	.open {
-		@media screen and (max-width: 768px) {
-			display: initial;
-		}
 	}
 }
 
@@ -884,41 +346,6 @@ footer {
 			min-width: 100px;
 		}
 	}	
-}
-
-body.filter-overlay {
-	overflow-y: hidden;
-	.wrapper-datasets {
-
-		.sidebar {
-			z-index: 4;
-			position: fixed;
-			background-color: #fff;
-			left: 0;
-			right: 0;
-			top: 0;
-			bottom: 0;
-			height: 100%;
-			padding: 1.5em 1.2em;
-			width: auto;
-		}
-	}
-}
-
-.wrapper-datasets {
-	.sidebar {
-		@media screen and (max-width: 768px) {
-			display: none;
-		}
-		@media screen and (min-width: 768px) {
-			display: initial;
-		}
-	}
-	.open {
-		@media screen and (max-width: 768px) {
-			display: initial;
-		}
-	}
 }
 
 .content-sidebar {
@@ -947,51 +374,6 @@ body.filter-overlay {
 	line-height: 2.8em;
 }
 
-.banking { border-top: 2px solid $banking; }
-.budget { border-top: 2px solid $budget; }
-.crime { border-top: 2px solid $crime; }
-.communications { border-top: 2px solid $communications; }
-.economics { border-top: 2px solid $economics; }
-.education { border-top: 2px solid $education; }
-.employment { border-top: 2px solid $employment; }
-.environment { border-top: 2px solid $environment; }
-.health { border-top: 2px solid $health; }
-.housing { border-top: 2px solid $housing; }
-.energy { border-top: 2px solid $energy; }
-.population { border-top: 2px solid $population; }
-.trade { border-top: 2px solid $trade; }
-.transport { border-top: 2px solid $transport; }
-.women { border-top: 2px solid $women; }
-
-.content-dataset { padding-top: 3.5em; border-top-width: 3px;}
-
-.filter-categories li label {
-	&:before {
-		display: inline-block;
-		width: 5px;
-		height: 16px;
-		content: ".";
-		margin: 0 .5em 0 .4em;
-	}
-}
-
-.list-item-filter-banking label:before { background-color: $banking; }
-.list-item-filter-budget label:before { background-color: $budget; }
-.list-item-filter-crime label:before { background-color: $crime; }
-.list-item-filter-communications label:before { background-color: $communications; }
-.list-item-filter-economics label:before { background-color: $economics; }
-.list-item-filter-education label:before { background-color: $education; }
-.list-item-filter-employment label:before { background-color: $employment; }
-.list-item-filter-environment label:before { background-color: $environment; }
-.list-item-filter-health label:before { background-color: $health; }
-.list-item-filter-housing label:before { background-color: $housing; }
-.list-item-filter-energy label:before { background-color: $energy; }
-.list-item-filter-population label:before { background-color: $population; }
-.list-item-filter-trade label:before { background-color: $trade; }
-.list-item-filter-transport label:before { background-color: $transport; }
-.list-item-filter-women label:before { background-color: $women; }
-
-
 .content-centered {
 	margin-left: auto;
   margin-right: auto;
@@ -1017,27 +399,6 @@ body.filter-overlay {
 
 .wrapper-half-right {
 	float: right;
-}
-
-.wrapper-content-about {
-	p {
-		font-size: 1.1em;
-		line-height: 1.9em;
-		color: $dark-grey;
-		&:nth-of-type(3) {
-			width: 62%;
-			float: left;
-			@media screen and (max-width: 600px) {
-				width: 100%;
-			}
-		}
-		&:first-of-type {
-			width: 90%;
-			@media screen and (max-width: 600px) {
-				width: 100%;
-			}
-		}
-	}
 }
 
 .float-right {
@@ -1083,42 +444,6 @@ body.filter-overlay {
 	}
 }
 
-.block-partners {
-	float: left;
-	p {
-		font-size: 1em;
-	}
-	ul {
-		list-style-type: none;
-		margin-left: 0;
-	}
-	li { 
-		margin-bottom: 1.5em;
-		@media screen and (max-width: 600px) {
-			width: 40%;
-			float: left;
-			margin-right: 4%;
-		}
-	}
-	width: 24%;
-		border-left: 3px solid $black;
-		margin-left: 4em;
-		padding-left: 4em;
-		border-top: 0;
-		padding-top: 0;
-		margin-top: 0;
-		float: right;
-	@media screen and (max-width: 600px) {
-		border-top: 3px solid $black;
-		border-left: 0;
-		margin-left: 0;
-		padding-left: 0;
-		margin-top: 4em;
-		padding-top: 4em;
-		width: 100%;
-	}
-}
-
 .centered-content {
 	margin: 0 auto;
 	width: 85%;
@@ -1141,11 +466,3 @@ body.filter-overlay {
 	}
 }
 
-footer .button-standalone {
-	clear: both;
-	@media screen and (max-width: 520px) {
-		margin-top: 2em;
-		float: left;
-
-	}
-}
