--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -7,7 +7,7 @@
 
 		{% include header.html %}
 
-		<div class="page-content">
+		<div class="page-content" id="page-content">
 		  {{ content }}
 		</div>
 
