Add dynamic display of dataset using 404 redirect
* Call to a dataset that doesn't have a page will be rendered using a
  404 redirect to the home page and dynamically rendered using react

* LANG fixes: add variables from fa.yml and en.yml needed for dataset
  rendering to the home layout.

--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -53,3 +53,14 @@ layout: default
 		<a class="button" href="/{{page.lang}}/usecases/">{{lang.homepage-usecases-button}}</a>
 	</div>
 </section>
+<script>
+ const lang = {
+     'button-share': '{{lang.button-share}}',
+     'button-download': '{{lang.button-download}}',
+     'dataset-secondary-title': '{{lang.dataset-secondary-title}}',
+     'dataset-id': '{{lang.dataset-id}}',
+     'dataset-dates': '{{lang.dataset-dates}}',
+     'dataset-formats': '{{lang.dataset-formats}}',
+     'dataset-source': '{{lang.dataset-source}}'
+ }
+</script>
