--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -23,8 +23,8 @@
 					</ul>
 				</nav>
 				<ul class="nav-languages nav-list list-type-none">
-					<li class="nav-list_item"><a href="/en{{page.url| remove_first:'/fa' | remove_first:'/en'}}" class="nav-link active">English</a></li>
-					<li class="nav-list_item"><a href="/fa{{page.url | remove_first:'/fa' | remove_first:'/en'}}" class="nav-link">فارسی</a></li>
+					<li class="nav-list_item"><a id="nav-link-english" href="/en{{page.url| remove_first:'/fa' | remove_first:'/en'}}" class="nav-link active">English</a></li>
+					<li class="nav-list_item"><a id="nav-link-farsi" href="/fa{{page.url | remove_first:'/fa' | remove_first:'/en'}}" class="nav-link">فارسی</a></li>
 				</ul>
 			</div>
 		</div>
