--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -49,7 +49,12 @@ featured2: writersblock
      'dataset-id': '{{lang.dataset-id}}',
      'dataset-dates': '{{lang.dataset-dates}}',
      'dataset-formats': '{{lang.dataset-formats}}',
-     'dataset-source': '{{lang.dataset-source}}'
+     'dataset-source': '{{lang.dataset-source}}',
+     'dataset-added': '{{lang.dataset-added}}',
+     'dataset-maintainer': '{{lang.dataset-maintainer}}',
+     'dataset-frequency': '{{lang.dataset-frequency}}',
+     'dataset-keywords': '{{lang.dataset-keywords}}',
+     'dataset-license': '{{lang.dataset-license}}'
  }
  const PAGE_LANG = '{{page.lang}}';
 </script>
