Fix formatting for dates in listings

--- a/app/_layouts/dataset.html
+++ b/app/_layouts/dataset.html
@@ -41,6 +41,7 @@ layout: default
      'dataset-formats': '{{lang.dataset-formats}}',
      'dataset-source': '{{lang.dataset-source}}',
      'dataset-added': '{{lang.dataset-added}}',
+     'dataset-updated': '{{lang.dataset-updated}}',
      'dataset-maintainer': '{{lang.dataset-maintainer}}',
      'dataset-frequency': '{{lang.dataset-frequency}}',
      'dataset-keywords': '{{lang.dataset-keywords}}',
