--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -51,6 +51,7 @@ featured2: writersblock
      'dataset-formats': '{{lang.dataset-formats}}',
      'dataset-source': '{{lang.dataset-source}}',
      'dataset-added': '{{lang.dataset-added}}',
+     'dataset-updated': '{{lang.dataset-updated}}',
      'dataset-maintainer': '{{lang.dataset-maintainer}}',
      'dataset-frequency': '{{lang.dataset-frequency}}',
      'dataset-keywords': '{{lang.dataset-keywords}}',
