--- a/app/assets/styles/main_rtl.scss
+++ b/app/assets/styles/main_rtl.scss
@@ -35,6 +35,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .metadata-item-header {
 	font-family: 'rtlBold';
+	&:nth-of-type(3n) {
+		clear: left;
+	}
 }
 
 .label-form {
