Fix datasets link on homepage

--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -9,7 +9,7 @@ featured2: writersblock
 			<div class="section-feature_main">
 				<h1 class="header-feature">{{lang.homepage-title}}</h1>
 				<p class="description-lg">{{lang.homepage-descript}}</p>
-				<a class="button button-lg" href="/{{page.lang}}/data/">{{lang.homepage-button}}</a>
+				<a class="button button-lg" href="/{{page.lang}}/datasets/">{{lang.homepage-button}}</a>
 			</div>
 			<div class="section-feature_secondary" id="featured-homepage">
 			</div>
