Fix URLs for buttons

--- a/app/_layouts/developers.html
+++ b/app/_layouts/developers.html
@@ -8,7 +8,7 @@ layout: default
 		{% for post in site.developers | where:"lang",page.lang %}
 		  {{post.content}}
 		{% endfor %}
-		<a class="button" href="">{{lang.button-api}}</a>
+		<a class="button" href="https://github.com/iranopendata/catalog/blob/master/API.md">{{lang.button-api}}</a>
 		<a class="button button-secondary" href="https://github.com/orgs/iranopendata/">{{lang.button-github}}</a>
 	</div>
 </section>
