--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -17,7 +17,7 @@
 					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
 				</ul>
 			</nav>
-			<a class="button button-sm float-right button-standalone" href="">{{lang.button-github}}</a>
+			<a class="button button-sm float-right button-standalone" href="https://github.com/orgs/iranopendata">{{lang.button-github}}</a>
 		</div>
 	</div>
 </footer>
