--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -3,23 +3,39 @@
 		<div class="wrapper-half wrapper-half-left">
 			<h5 class="header-with-description">{{lang.sign_up-title}}</h5>
 			<p>{{lang.newsletter-descript}}</p>
-			<input type="" name="" placeholder="Enter Your Email">
-			<button class="button button-sm button-secondary">{{lang.button-submit}}</button>
-		</div>
-		<div class="wrapper-half wrapper-half-right">
-			<nav class="float-right">
-				<ul class="list-type-none">
-					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/data/">{{lang.data}}</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/usecases/">{{lang.use_cases}}</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/resources/">{{lang.resources}}</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/developers/">{{lang.developers}}</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/about/">{{lang.about}}</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
-				</ul>
-			</nav>
-			<a class="button button-sm float-right button-standalone" href="https://github.com/orgs/iranopendata">{{lang.button-github}}</a>
-		</div>
-	</div>
+      <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup">
+        <form action="//sabznameh.us1.list-manage.com/subscribe/post?u=7fdb14e291091d23007369520&amp;id=9238ab4edd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+            <div class="mc-field-group">
+              <input type="email" placeholder="Enter Email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7fdb14e291091d23007369520_9238ab4edd" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="{{lang.button-submit}}" name="subscribe" id="mc-embedded-subscribe" class="button button-sm button-secondary"></div>
+          </div>
+        </form>
+      </div>
+
+      <!--End mc_embed_signup-->
+    </div>
+    <div class="wrapper-half wrapper-half-right">
+      <nav class="float-right">
+        <ul class="list-type-none">
+          <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/data/">{{lang.data}}</a></li>
+          <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/usecases/">{{lang.use_cases}}</a></li>
+          <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/resources/">{{lang.resources}}</a></li>
+          <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/developers/">{{lang.developers}}</a></li>
+          <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/about/">{{lang.about}}</a></li>
+          <li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
+        </ul>
+      </nav>
+      <a class="button button-sm float-right button-standalone" href="https://github.com/orgs/iranopendata">{{lang.button-github}}</a>
+    </div>
+  </div>
 </footer>
 
 <!-- build:js /assets/scripts/vendor.js -->
