styling for email newsletter form

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -13,5 +13,6 @@
 @import "datasets";
 @import "about";
 @import "footer";
+@import "signup";
 @import 'https://fonts.googleapis.com/css?family=Lato:700,900';
 @import 'https://fonts.googleapis.com/css?family=Raleway:400,400i,700';
