--- a/app/assets/styles/main_rtl.scss
+++ b/app/assets/styles/main_rtl.scss
@@ -324,3 +324,17 @@ footer .button-standalone {
 	margin-right: 1em;
 }
 
+#mc_embed_signup_scroll {
+	.mc-field-group {
+		float: right;
+	}
+	.clear {
+		float: right;
+		input {
+			@media screen and (max-width: 744px) {
+				margin-right: 0;
+				clear: right;
+			}
+		}
+	}
+}
