Adds FA version of static pages

--- a/app/_includes/contribute.html
+++ b/app/_includes/contribute.html
@@ -6,7 +6,7 @@
 			<h2 class="section-black-header">{{lang.contribute-title}}</h2>
 			<div class="section-black-description">
 				<p class="description-md">{{lang.contribute-descript}}</p>
-				<a class="button button-white" href="http://github.com/iranopendata/iranopendata/issues">{{lang.contribute-button}}</a>
+				<a class="button button-white" href="http://github.com/iranopendata/iranopendata.github.io/issues">{{lang.contribute-button}}</a>
 				<a class="button button-white button-secondary" href="/{{page.lang}}/contact/">{{lang.show-button}}</a>
 			</div>
 		</div>
