--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -5,8 +5,10 @@ layout: default
 <section>
 	<div class="wrapper wrapper-content wrapper-content-sm wrapper-content-about">
 		<h1>{{lang.about}}</h1>
-		{% for post in site.about | where:"lang", post.lang %}
-		  {{post.content}}
+		{% for post in site.about %}
+      {% if post.lang == page.lang %}
+        {{post.content}}
+      {% endif %}
 		{% endfor %}
 	</div>
 </section>
