--- a/app/_layouts/developers.html
+++ b/app/_layouts/developers.html
@@ -5,20 +5,24 @@ layout: default
 <section>
 	<div class="wrapper wrapper-content wrapper-content-sm content-block">
 		<h1>{{lang.developers}}</h1>
-		{% for post in site.developers | where:"lang",page.lang %}
-		  {{post.content}}
-		{% endfor %}
-		<a class="button" href="https://github.com/iranopendata/catalog/blob/master/API.md">{{lang.button-api}}</a>
-		<a class="button button-secondary" href="https://github.com/orgs/iranopendata/">{{lang.button-github}}</a>
-	</div>
+    {% for post in site.developers %}
+      {% if post.lang == page.lang %}
+        {{post.content}}
+      {% endif %}
+    {% endfor %}
+    <a class="button" href="https://github.com/iranopendata/catalog/blob/master/API.md">{{lang.button-api}}</a>
+    <a class="button button-secondary" href="https://github.com/orgs/iranopendata/">{{lang.button-github}}</a>
+  </div>
 </section>
 {% include contribute.html %}
 <section>
-	<div class="wrapper wrapper-content wrapper-content-sm content-block">
-		<h2>Methodology</h2>
-		{% for post in site.methodology | where: "lang",page.lang %}
-			{{post.content}}
-		{% endfor %}
-		<a class="button" href="">Learn More</a>
-	</div>
+  <div class="wrapper wrapper-content wrapper-content-sm content-block">
+    <h2>Methodology</h2>
+    {% for post in site.methodology %}
+      {% if post.lang == page.lang %}
+        {{post.content}}
+      {% endif %}
+    {% endfor %}
+    <a class="button" href="">Learn More</a>
+  </div>
 </section>
