--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-featured1: gdp
-featured2: writersblock
+featured1: nocrcd1693
+featured2: mhmelih16
 ---
 {% assign lang = site.data[page.lang][0] %}
 <section class="wrapper-feature feature">
